fixed bug with dragging on mobile

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -115,6 +115,7 @@
     gap: 2em;
     margin-top: 2em;
     cursor: grab;
+    touch-action: none;
   }
 
   .image-card-container{
@@ -157,6 +158,7 @@
       grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
       place-items: center;
       gap: 1em;
+      touch-action: none;
     }
 
     .image-card{
